# SpecprParser.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg
.ci/: fix_python_modules_paths.py
SpecprParser/: __init__.py
SpecprParser/kaitai/: specpr.py
tests/: test  tests.py
