[metadata]
name = SpecprParser
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/SpecprParser
description = a parser for SPECtrum Processing Routines Data Format 3/4/88
long_description = file: ReadMe.md
keywords = spectroscopy, specpr, parser, kaitai
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Science :: Spectroscopy

[options]
include_package_data = True
zip_safe = True
packages = SpecprParser
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3; kaitaiStructCompile @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.py#egg=kaitaiStructCompile;
test_suite = tests.tests.Tests
install_requires =
	kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.py#egg=kaitaistruct
	numpy
